--- a/aws/iam/templates/iam/partials/users_list.html
+++ b/aws/iam/templates/iam/partials/users_list.html
@@ -1,9 +1,11 @@
-<h4>{{ title }}</h4>
-<p>{{ users|length }} total</p>
-<ul class="fa-ul">
+<div class="text-center">
+    <h6>{{ title }}</h6>
+    <h5>{{ instances|length }}</h5>
+</div>
+<ul class="fa=ul">
     {% for user in users %}
         <li>
-           <i class="fa fa-li fa-user"></i>
+            <i class="fa fa-li fa-user"></i>
             <p class="text-info"><strong>Username</strong> <a href="{% url 'iam:user' user.UserName %}">{{ user.UserName }}</a>
                 {% if user.PasswordLastUsed %}<br/><strong>Last login</strong> {{ user.PasswordLastUsed }}{% endif %}
             </p>
@@ -13,7 +15,5 @@
             <p>Created: <small>{{ user.CreateDate }}</small></p>
 
         </li>
-    {% empty %}
-        <p>No users found</p>
     {% endfor %}
 </ul>
